Fix contrast issue

--- a/src/styling/ChatWindow.css
+++ b/src/styling/ChatWindow.css
@@ -95,7 +95,7 @@
 }
 
 .message.received {
-  background-color: #e1e1e1;
+  background-color: #5e5e5e;
   align-self: flex-start;
 }
 
